# kernel-allocator

./: Cargo.toml  LICENSE  README.md
src/: kernel_allocator.rs  lib.rs
